--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -122,6 +122,7 @@ jobs:
           docker run
           -v $(pwd)/public:/app/public
           -v $(pwd)/data:/app/data
+          -v $(pwd)/static:/app/static
           -v $(pwd)/.env:/app/.env
           -v $(pwd)/config.yaml:/app/config.yaml
           -e GATSBY_RESPOSITORY_URL=https://github.com/$GITHUB_REPOSITORY
